<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Account</string>
    <string name="title_activity_login" translatable="false">Activity2</string>
    <string name="name">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="infos">User account information</string>
    <string name="retour">return</string>
    <string name="changeLang">languages</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="Welcome">"Welcome"</string>
    <string name="splash">Account management</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
</resources>