<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".Activity2">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="578dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="350dp"
    android:layout_height="40dp">
    <TextView
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:text="ToolBar"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:padding="10dp"
        style="@style/TEXT"
        android:textStyle="bold"
        ></TextView>
    <Switch
        android:id="@+id/switcher"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        ></Switch>


</LinearLayout>


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/mobile"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/Welcome"
            android:textColor="#926AC3"
            android:textSize="25dp"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/name"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/edit"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            style="@style/BUTTON"
            android:textColorHint="#2CA7E0"></EditText>

        <EditText
            android:id="@+id/pass"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/BUTTON"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColorHint="#2CA7E0"></EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/button"
                android:text="@string/login"
                android:layout_marginLeft="0dp"
                android:textColor="#fff"
                android:textSize="11dp"></Button>

            <Button
                android:id="@+id/changeLangage"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@drawable/button"
                android:text="@string/changeLang"
                android:textColor="#fff"
                android:textSize="11dp"></Button>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>